fixed wrong color choices for some things on the site

--- a/frontend/src/app/pages/browse/browse.component.less
+++ b/frontend/src/app/pages/browse/browse.component.less
@@ -75,6 +75,7 @@ div.browse-container {
 
                 div.approval {
                     float: right;
+                    color: whitesmoke;
 
                     i-feather {
                         margin: 0 0.15rem 0 0.25rem;
