--- a/frontend/src/app/pages/home/history/history.component.less
+++ b/frontend/src/app/pages/home/history/history.component.less
@@ -3,6 +3,7 @@ div.history-container {
     div.history-header {
         max-width: 100%;
         margin-top: 2rem;
+        border-bottom: 1px solid var(--site-borders);
 
         h2 {
             display: inline-block;
@@ -10,7 +11,7 @@ div.history-container {
         }
     }
 
-    hr.header-divider {
-        margin-top: 0;
+    div.hist-feed {
+        
     }
 }
