--- a/frontend/src/app/pages/portfolio/port-works/port-works.component.less
+++ b/frontend/src/app/pages/portfolio/port-works/port-works.component.less
@@ -76,6 +76,7 @@ div.port-works-container {
 
                 div.approval {
                     float: right;
+                    color: whitesmoke;
 
                     i-feather {
                         margin: 0 0.15rem 0 0.25rem;
