--- a/frontend/src/app/pages/work-page/work-page.component.less
+++ b/frontend/src/app/pages/work-page/work-page.component.less
@@ -374,6 +374,7 @@ div.author-controls {
     button.control-button {
         background-color: var(--site-background);
         color: var(--site-text-color);
+        border: 1px solid var(--site-borders);
 
         &:hover {
             color: whitesmoke;
@@ -384,9 +385,8 @@ div.author-controls {
     button.add-section {
         padding-left: 1rem;
         padding-right: 1rem;
-        border-right: 1px solid var(--site-borders);
-        border-left: 1px solid var(--site-borders);
         box-shadow: none;
+        border: 1px solid var(--site-borders);
 
         i-feather.plus-section {
             width: 18px;
